infra/longhorn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
spec:
  rules:
  - host: longhorn.k8s.snucse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
